# agent-challenge

./: .env.example  .eslintignore  DOCKER-README.md  Dockerfile  Dockerfile.backend  README.md  docker-compose.yml  install_otel.sh  next.config.js  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.py  test_api.py  test_backend.py  test_connections.py  test_endpoint.py  test_imports.py
src/: instrumentation.ts
src/app/: ActivityChart.tsx  RiskCard.tsx  WalletOverview.tsx  page.tsx
src/app/api/: analyze.ts  explain.ts
src/app/api/analyze/: route.ts
src/app/api/analyze_wallet/: route.ts
src/app/api/wallet_activity/: [wallet].ts
src/app/api/wallet_activity/[wallet]/: route.ts
src/lib/: helius.ts
src/mastra/: __init__.py  api_explain.py  api_wallet_activity.py  client.ts  main.py  ws_alerts.py
src/mastra.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mastra/agents/: coordinator_agent.py  risk_advisor.py  token_forensics.py  transaction_monitor.py
src/mastra/tools/: contract_scanner.py  liquidity_checker.py  solana_data_fetcher.py
src/mastra/xai/: explain_engine.py
