[tool.poetry]
name = "nosana"
version = "0.1.0"
description = "Nosana Application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
pydantic = "^1.10.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
